k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urlshortener
  labels:
    app.kubernetes.io/name: shortly
    app.kubernetes.io/part-of: shortly
    app.kubernetes.io/component: api
