k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortly
  namespace: urlshortener
  labels:
    app.kubernetes.io/name: shortly
    app.kubernetes.io/part-of: shortly
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: shortly
    app.kubernetes.io/part-of: shortly
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
